# homework_store

./: .env.template  Dockerfile  README.md  add_objects.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
config/: settings.py  urls.py
store_app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
store_app/fixtures/: load_moc_data.json
store_app/migrations/: 0001_initial.py  0002_category_product_category.py
store_app/models/: __init__.py  categories.py  products.py  statuses.py
store_app/templates/store_app/: about.html  add_product.html  base.html  deleted_product.html  index.html  nav_bar.html  product_detail.html  product_edit.html  product_list.html
store_app/tests/: conftest.py  test_models.py  test_views.py
