[project]
name = "homework-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.3",
    "django-celery-results>=2.6.0",
    "environ>=1.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "pytest>=8.4.1",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]
